refactor: rename models to DTO VO BO